Issue #7811.Paragraph spacing

--- a/src/FDC/CourtMetrageBundle/Resources/public/css/custom.css
+++ b/src/FDC/CourtMetrageBundle/Resources/public/css/custom.css
@@ -370,7 +370,7 @@ body.chocolat-open.fixed {
 }
 
 .modal-content .half .wysiwyg p {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .slideshow .slideshow-img .thumbnails .thumb:after {
